--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -87,8 +87,10 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Barang Masuk"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Barang Transaksi"
                     android:textSize="19dp" />
 
             </LinearLayout>
@@ -125,8 +127,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Request Barang"
-                    android:textSize="18dp" />
+                    android:textSize="19dp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
