--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">@color/cardview_shadow_start_color</color>
     <color name="blue">#2196f3</color>
+    <color name="black">#000</color>
 </resources>
