--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_item"
+    <item android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_baseline_refresh"
-        app:showAsAction="always"
+        app:showAsAction="never"
         android:title="Refresh" />
+
+    <item android:id="@+id/menu_search"
+        android:icon="@drawable/ic_baseline_search"
+        app:showAsAction="never"
+        android:title="Search" />
 
 </menu>
