fix search daftar transaksi

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_refresh"
-        android:icon="@drawable/ic_baseline_refresh"
-        app:showAsAction="never"
-        android:title="Refresh" />
-
-    <item android:id="@+id/menu_search"
+    <item
+        android:id="@+id/menu_search"
         android:icon="@drawable/ic_baseline_search"
-        app:showAsAction="never"
-        android:title="Search" />
+        android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
+
+    <item
+        android:id="@+id/menu_refresh"
+        android:icon="@drawable/ic_baseline_refresh"
+        android:title="Refresh"
+        app:showAsAction="never" />
 
 </menu>
