--- a/app/src/main/res/layout/content_transaksi_header.xml
+++ b/app/src/main/res/layout/content_transaksi_header.xml
@@ -64,15 +64,18 @@
 
 
             <TextView
+                android:id="@+id/tv_posisi_kiri"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="Data Customer"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/iv_posisi_kiri"
                 app:layout_constraintStart_toStartOf="@+id/iv_posisi_kiri"
                 app:layout_constraintTop_toBottomOf="@+id/iv_posisi_kiri" />
 
             <TextView
+                android:id="@+id/tv_posisi_tengah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -82,6 +85,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/iv_posisi_tengah" />
 
             <TextView
+                android:id="@+id/tv_posisi_kanan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
