--- a/app/src/main/res/layout/fragment_data_customer.xml
+++ b/app/src/main/res/layout/fragment_data_customer.xml
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
+        android:inputType="number"
         android:background="@drawable/action_detail"
         android:hint="No Telp"
         android:paddingLeft="10dp"
