--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -16,7 +16,10 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/content_detail_transaksi" />
+        layout="@layout/content_detail_transaksi"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
