--- a/app/src/main/res/layout/fragment_data_barang.xml
+++ b/app/src/main/res/layout/fragment_data_barang.xml
@@ -28,6 +28,7 @@
             android:layout_weight="1"
             android:background="@drawable/action_detail"
             android:hint="Qty"
+            android:inputType="number"
             android:paddingStart="10dp"
             android:paddingEnd="1dp" />
 
