--- a/app/src/main/res/layout/item_daftar_inventory.xml
+++ b/app/src/main/res/layout/item_daftar_inventory.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constrain_layout"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="100dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
@@ -11,11 +11,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="6dp"
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Bimo Syahputro" />
+
+    <TextView
+        android:id="@+id/tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_nama_barang"
+        app:layout_constraintTop_toBottomOf="@+id/tv_nama_barang"
+        tools:text="Menuggu" />
+
+    <ImageView
+        android:id="@+id/tv_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:src="@drawable/ic_baseline_arrow_forward"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_status"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_nama_barang"
+        app:layout_constraintVertical_bias="0.484"
+        />
 
     <View
         android:layout_width="match_parent"
