--- a/app/src/main/res/layout/activity_daftar_transaksi.xml
+++ b/app/src/main/res/layout/activity_daftar_transaksi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.daftarTransaksi.DaftarTransaksiActivity">
+    tools:context=".activity.transaksi.daftarTransaksi.DaftarTransaksiActivity">
 
     <include layout="@layout/content_daftar_transaksi" />
 
