--- a/app/src/main/res/layout/activity_detail_transaksi.xml
+++ b/app/src/main/res/layout/activity_detail_transaksi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.daftarTransaksi.DaftarTransaksiActivity">
+    tools:context=".activity.transaksi.daftarTransaksi.DaftarTransaksiActivity">
 
     <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
     <!--        android:id="@+id/fab"-->
