--- a/app/src/main/res/layout/content_detail_transaksi.xml
+++ b/app/src/main/res/layout/content_detail_transaksi.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
-        tools:context=".activity.detailTransaksi.DetailTransaksiActivity">
+        tools:context=".activity.transaksi.detailTransaksi.DetailTransaksiActivity">
 
         <TextView
             android:id="@+id/textView"
